--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -110,7 +110,7 @@
   }
 
   .info_blurb {
-    font-size: 2.2rem;
+    font-size: 2rem;
   }
 
   .card_details ul li {
